--- a/research.Rmd
+++ b/research.Rmd
@@ -4,7 +4,7 @@ title: ""
 
 <font size="6"> Publications, and Works Under Review</font>
 
-<font size="3"> Junqueira, Andrea, and Patrick Cunha Silva. “Strengthening the Party, Weakening the Women: Unforeseen Consequences of Strengthening Institutions.” *Conditionally Accepted, The Journal of Politics*. </font> 
+<font size="3"> Junqueira, Andrea, and Patrick Cunha Silva. "Strengthening the Party, Weakening the Women: Unforeseen Consequences of Strengthening Institutions." *The Journal of Politics*. Available [here](https://www.journals.uchicago.edu/doi/10.1086/726966).</font> 
 
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName2" center> Abstract </button>  
 <div id="BlockName2" class="collapse">  
@@ -16,32 +16,32 @@ The party politics literature suggests that an institutionalized party system ca
 <br /> 
 
 
-<font size="3"> Junqueira, Andrea, Ali Kagalwala, and Christine Lipsmeyer. 2023. “What's Your Problem? How Issue Ownership and Partisan Discourse Influence Personal Concerns.” *Social Science Quartely*. Available [here](https://doi.org/10.1111/ssqu.13259).</font>
+<font size="3"> Junqueira, Andrea, Ali Kagalwala, and Christine Lipsmeyer. 2023. "What's Your Problem? How Issue Ownership and Partisan Discourse Influence Personal Concerns." *Social Science Quartely*. Available [here](https://doi.org/10.1111/ssqu.13259).</font>
 
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName3" center> Abstract </button>  
 <div id="BlockName3" class="collapse">  
 
-*Objective*: Politics around the world has become more divisive. We ask if the influence of far-right parties extends to personal concerns and argue that a theory combining issue ownership with partisan discourse can explain personal policy salience. *Method*: Using aggregate Eurobarometer data, we create compositional models to estimate the effect of partisan discourse on pocketbook policy concerns. We focus on whether these elite messages influence concerns differently depending on the presence of a far-right party. *Results*: We find that more partisan discussion about law-and-order issues influences relative personal concerns on security and immigration issues across ideological groups when a far-right party is present. *Conclusions*: Our findings suggest that an “issue owning” party can alter how people interpret politics and view their own concerns. Far-right parties influence the perceptions of people across ideologies. Research showed that these parties can influence parties and voters; we show that they can shape personal perceptions.
+*Objective*: Politics around the world has become more divisive. We ask if the influence of far-right parties extends to personal concerns and argue that a theory combining issue ownership with partisan discourse can explain personal policy salience. *Method*: Using aggregate Eurobarometer data, we create compositional models to estimate the effect of partisan discourse on pocketbook policy concerns. We focus on whether these elite messages influence concerns differently depending on the presence of a far-right party. *Results*: We find that more partisan discussion about law-and-order issues influences relative personal concerns on security and immigration issues across ideological groups when a far-right party is present. *Conclusions*: Our findings suggest that an "issue owning" party can alter how people interpret politics and view their own concerns. Far-right parties influence the perceptions of people across ideologies. Research showed that these parties can influence parties and voters; we show that they can shape personal perceptions.
 
 </div>
 
 <br /> 
 
 
-<font size="3"> Junqueira, Andrea, Thiago Silva, and Guy Whitten. 2023. “What About Us? Political Competition, Economic Performance, Immigration, and Nativist Appeals.” *Social Science Quartely*. Available [here](https://doi.org/10.1111/ssqu.13240).</font>
+<font size="3"> Junqueira, Andrea, Thiago Silva, and Guy Whitten. 2023. "What About Us? Political Competition, Economic Performance, Immigration, and Nativist Appeals." *Social Science Quartely*. Available [here](https://doi.org/10.1111/ssqu.13240).</font>
 
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName4" center> Abstract </button>  
 <div id="BlockName4" class="collapse">  
 
-*Objective*: To develop and test theoretical expectations about when political parties will make more or fewer nativist appeals in their electoral campaigns. *Methods*: We use spatial autoregressive models to test our claims about the ways in which electoral competition drives nativist appeals. *Results*: We find strong support for our theoretical expectations on how spatial and temporal processes influence parties’ nativist appeals. We also find strong support for our expectations on how the percentage of foreign-born population shapes nativist appeals by government
-parties and how economic performance shapes nativist appeals by opposition parties. *Conclusion*: Spatial party competition conditions the relationship between economic performance, immigration, and parties’ nativist appeals, revealing the strategic behavior of political parties in their choices of when to make nativist appeals more or less prominent in their electoral campaigns.
+*Objective*: To develop and test theoretical expectations about when political parties will make more or fewer nativist appeals in their electoral campaigns. *Methods*: We use spatial autoregressive models to test our claims about the ways in which electoral competition drives nativist appeals. *Results*: We find strong support for our theoretical expectations on how spatial and temporal processes influence parties' nativist appeals. We also find strong support for our expectations on how the percentage of foreign-born population shapes nativist appeals by government
+parties and how economic performance shapes nativist appeals by opposition parties. *Conclusion*: Spatial party competition conditions the relationship between economic performance, immigration, and parties' nativist appeals, revealing the strategic behavior of political parties in their choices of when to make nativist appeals more or less prominent in their electoral campaigns.
 
 </div>
 
 <br /> 
 
 
-<font size="3"> Barberia, Lorena, Maria Leticia Claro Oliveira, Andrea Junqueira, Natalia Moreria, and Guy Whitten. 2021. “Should I Stay or Should I Go? Embracing Causal Heterogeneity in the Study of Pandemic Policy and Citizen Behavior.” *Social Science Quartely*. Available [here](https://onlinelibrary.wiley.com/doi/10.1111/ssqu.13037).</font> 
+<font size="3"> Barberia, Lorena, Maria Leticia Claro Oliveira, Andrea Junqueira, Natalia Moreria, and Guy Whitten. 2021. "Should I Stay or Should I Go? Embracing Causal Heterogeneity in the Study of Pandemic Policy and Citizen Behavior." *Social Science Quartely*. Available [here](https://onlinelibrary.wiley.com/doi/10.1111/ssqu.13037).</font> 
 
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName" center> Abstract </button>  
 <div id="BlockName" class="collapse">  
@@ -54,9 +54,40 @@ Our analysis of Granger causal ordering between the four variables demonstrates 
 <br /> 
 
 
+
+<font size="3"> Janusz, Andrew, Patrick Cunha Silva, and Andrea Junqueira. "Electoral Role Models: Political Empowerment and Candidate Emergence." *Under review*. </font>
+
+<button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName7" center> Abstract </button>  
+<div id="BlockName7" class="collapse">  
+
+Does the election of politicians from historically marginalized groups spur others to enter politics? Some political scientists and policymakers posit that the election of women and people of color to prominent political offices can inspire others to run for office, yet prior research has yielded mixed results. We contribute to the literature on representation by exploring the impact of role models on candidate emergence at the local level, where aspiring politicians typically begin to climb the political ladder. Using data from Brazilian elections and a set of regression discontinuity designs, we find no evidence that the election of a woman or Afro-Brazilian mayor spurs women and Afro-Brazilians to run for city council positions. Our results, which are robust to several alternative specifications, suggest that even if the election of a woman or minority politician inspires others to enter politics, barriers may impede them from running for office.
+
+</div>
+
+<br /> 
+
+
+
+<font size="3"> Eastman, Abbie, Andrea Junqueira, Ali Kagalwala, Andrew Philips, and Guy Whitten. "Volatile Pies: Modeling Compositional Volatility." *Under review*. </font>
+
+<button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName6" center> Abstract </button>  
+<div id="BlockName6" class="collapse">  
+
+*Objective*: To demonstrate the utility of modeling compositional volatility in substantive domains beyond budgeting. *Methods*: We show how to model compositional volatility on its own or as a part of a system of equations in which the component parts of the compositional outcome variable are also modeled. *Results*: Using data on the volatility of support for German political parties, we demonstrate the usefulness of stand-alone models of compositional volatility. Using data on the volatility of income shares in the United States, we demonstrate the usefulness of modeling volatility together with compositional components. *Conclusion*: There is considerable potential for modeling compositional volatility.
+
+</div>
+
+<br /> 
+
+
+
+
+
+
+
 <font size="6"> Selected Works in Progress</font>
 
-<font size="3"> Junqueira, Andrea. “The Political Economy of the Heavy Hand: How Poverty Reduces Politicians' Incentives to Reform Security Policies.” *In Progress*. </font>
+<font size="3"> Junqueira, Andrea. "The Political Economy of the Heavy Hand: How Poverty Reduces Politicians' Incentives to Reform Security Policies." *In Progress*. </font>
 
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName5" center> Abstract </button>  
 <div id="BlockName5" class="collapse">  
@@ -68,19 +99,19 @@ In democracies, how can coercive security policies that violate the rights of ma
 <br /> 
 
 
-<font size="3"> Cooperman, Alicia, Andrea Junqueira, Thiago Moreira, and Manuela Muñoz. “How do Mega Cities Decentralize Local Representation? Precinct-Level Voting Behavior and Municipal Service Provision: Evidence from Brazil and Colombia.” *In progress*. </font>
+<font size="3"> Cooperman, Alicia, Andrea Junqueira, Thiago Moreira, and Manuela Munoz. "How do Mega Cities Decentralize Local Representation? Precinct-Level Voting Behavior and Municipal Service Provision: Evidence from Brazil and Colombia." *In progress*. </font>
 
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName7" center> Abstract </button>  
 <div id="BlockName7" class="collapse">  
 
-Rapid urbanization increases the need to produce public goods, particularly in developing countries, where underprovision and unequal access to services are common. Many public services and development projects are tied to specific neighborhoods, where citizens vote at polling stations whose vote shares are publicly known. We argue that even in "at large electoral systems," the local nature of public services provision creates incentives for voters to demand narrow local representation and for local politicians to respond to specific requests and interests of a given group of constituencies within the city, often at the expense of others. We test our expectations by exploring variation in sub-municipal service provision in three major cities in Latin America: São Paulo, Bogotá, and Fortaleza. Our manuscript focuses on our empirical findings and the complex challenges facing scholars studying sub-municipal outcomes in multiple cases. Our results speak to the difficulties of overcoming underdevelopment and achieving democratic consolidation in the global south.
+Rapid urbanization increases the need to produce public goods, particularly in developing countries, where underprovision and unequal access to services are common. Many public services and development projects are tied to specific neighborhoods, where citizens vote at polling stations whose vote shares are publicly known. We argue that even in "at large electoral systems," the local nature of public services provision creates incentives for voters to demand narrow local representation and for local politicians to respond to specific requests and interests of a given group of constituencies within the city, often at the expense of others. We test our expectations by exploring variation in sub-municipal service provision in three major cities in Latin America: Sao Paulo, Bogota, and Fortaleza. Our manuscript focuses on our empirical findings and the complex challenges facing scholars studying sub-municipal outcomes in multiple cases. Our results speak to the difficulties of overcoming underdevelopment and achieving democratic consolidation in the global south.
 
 </div>
 
 <br /> 
 
 
-<font size="3"> Cheibub, José, Andrea Junqueira, and Thiago Moreira. “A War of All Against All? Analysing Spatial Dependence in Intraparty Competition in Open-list Proportional Representation Systems.” *In progress*. </font>
+<font size="3"> Cheibub, Jose, Andrea Junqueira, and Thiago Moreira. "A War of All Against All? Analyzing Spatial Dependence in Intraparty Competition in Open-list Proportional Representation Systems." *In progress*. </font>
 
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName10" center> Abstract </button>  
 <div id="BlockName10" class="collapse">  
@@ -93,24 +124,24 @@ In open-list proportional representation (OLPR) systems, candidates must obtain 
 
 
 
-<font size="3"> Junqueira, Andrea, Thiago Silva, and Guy Whitten. “Coalition Governance, Economic Voting, and Costs of Ruling in Presidential and Parliamentary Regimes.” *In progress*. </font>
+<font size="3"> Junqueira, Andrea, Thiago Silva, and Guy Whitten. "Coalition Governance, Economic Voting, and Costs of Ruling in Presidential and Parliamentary Regimes." *In progress*. </font>
 
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName9" center> Abstract </button>  
 <div id="BlockName9" class="collapse">  
 
-Throughout the democratic world, the modal government is a coalition of two or more political parties. Such cooperative arrangements between political rivals create challenges for voters attempting to evaluate their government’s performance and have motivated extensive literature on the costs of ruling and economic voting in conditions where clarity of responsibility for governing outcomes is less than clear. Although this literature has advanced our understanding of the relevant dynamics on how voters identify who is responsible for implementing policies and how they appropriately reward or punish the government for its performance, the vast majority of what we know about these dynamics comes from data on parliamentary regimes. In this project, we will compare these dynamics between presidential and parliamentary regimes. Presidential democracies are fundamentally different from parliamentary democracies in that the chief executive is elected separately from the legislature and serves for a fixed term. These features raise interesting questions about how voters hold governments accountable, especially when the government is a coalition. To answer these questions, we leverage a new collection of data on election results from presidential and parliamentary regimes that spans over 70 years (1949-2020), augmented by survey data on voters’ knowledge about governments in these two regime types.
+Throughout the democratic world, the modal government is a coalition of two or more political parties. Such cooperative arrangements between political rivals create challenges for voters attempting to evaluate their government's performance and have motivated extensive literature on the costs of ruling and economic voting in conditions where clarity of responsibility for governing outcomes is less than clear. Although this literature has advanced our understanding of the relevant dynamics on how voters identify who is responsible for implementing policies and how they appropriately reward or punish the government for its performance, the vast majority of what we know about these dynamics comes from data on parliamentary regimes. In this project, we will compare these dynamics between presidential and parliamentary regimes. Presidential democracies are fundamentally different from parliamentary democracies in that the chief executive is elected separately from the legislature and serves for a fixed term. These features raise interesting questions about how voters hold governments accountable, especially when the government is a coalition. To answer these questions, we leverage a new collection of data on election results from presidential and parliamentary regimes that spans over 70 years (1949-2020), augmented by survey data on voters' knowledge about governments in these two regime types.
 
 </div>
 
 <br /> 
 
 
-<font size="3"> Junqueira, Andrea, Ali Kagalwala, Andrew Philips, and Guy Whitten. “Endogenous Pie: Modeling Simultaneity in Dynamic Models of Compositional Outcomes.” *In progress*. </font>
+<font size="3"> Junqueira, Andrea, Ali Kagalwala, Andrew Philips, and Guy Whitten. "Endogenous Pie: Modeling Simultaneity in Dynamic Models of Compositional Outcomes." *In progress*. </font>
 
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName6" center> Abstract </button>  
 <div id="BlockName6" class="collapse">  
 
-Recent advances in the analysis of compositional data have extended the applicability of compositional-outcome models from cross-sectional data to time series and time-series-cross-section data. These models can explicitly account for the temporal and spatial dynamics in one’s theory. While these advances are many, and important, the models presented thus far assume that regressors are weakly exogenous. In this letter, we relax the assumption of weak-exogeneity by introducing a model that accounts for simultaneity between compositional outcomes and endogenous non-compositional
+Recent advances in the analysis of compositional data have extended the applicability of compositional-outcome models from cross-sectional data to time series and time-series-cross-section data. These models can explicitly account for the temporal and spatial dynamics in one's theory. While these advances are many, and important, the models presented thus far assume that regressors are weakly exogenous. In this letter, we relax the assumption of weak-exogeneity by introducing a model that accounts for simultaneity between compositional outcomes and endogenous non-compositional
 variables in time series data. Our approach involves creating what we call a compositional vector
 autoregression framework. We demonstrate the utility of our modeling approach with an application that analyzes income inequality in the United States.
 
@@ -119,14 +150,3 @@ autoregression framework. We demonstrate the utility of our modeling approach wi
 <br /> 
 
 
-<font size="3"> Junqueira, Andrea, Ali Kagalwala, and Christine Lipsmeyer. “How Much Can Governments Truly
-Change Budgets? Fiscal Institutions and Budgetary Volatility.” *In progress*. </font>
-
-<button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName8" center> Abstract </button>  
-<div id="BlockName8" class="collapse">  
-
-
-
-</div>
-
-<br /> 
