--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -8,6 +8,16 @@ title: ""
 
 <font size="4"> ***Instructor of Record*** </font>
 
+<p>POSC 3003: Introduction to Political Analysis<br>
+Undergraduate level<br>
+Arkansas State University<br>
+Fall 2023<br>
+
+<p>POSC 4143: Public Opinion and Public Policy<br>
+Undergraduate level<br>
+Arkansas State University<br>
+Fall 2023<br>
+
 <p>POLS 323: Political Systems of Latin America<br>
 Undergraduate level<br>
 Texas A&M University<br>
