--- a/index.Rmd
+++ b/index.Rmd
@@ -1,29 +1,28 @@
 ---
 title: ""
-pagetitle: "Andrea Junqueira"
+pagetitle: "Hannah L. Paul"
 ---
 
-<img src="/Users/ajunqueira/Library/CloudStorage/Dropbox/website/andrea-junqueira.github.io/bruno-thethe-br.jpg" class="inline" width="1300"/>
+<img src="/Users/hlp2nf/Library/CloudStorage/Dropbox/GitHub Website/matteo-paganelli-5XJarqlwvPA-unsplash.jpg" class="inline" width="1300"/>
 
-<div style="text-align: right"> <font size="1">Photo by Bruno Thethe on Unsplash</font> </div>
+<div style="text-align: right"> <font size="1">Photo by Matteo Paganelli on Unsplash</font> </div>
 
 
 
 <br /> 
 
 
-<img src="/Users/ajunqueira/Library/CloudStorage/Dropbox/website/andrea-junqueira.github.io/IMG-3979-modified.png" style="inline" width="240" align="left"/>
-
+<img src="/Users/hlp2nf/Library/CloudStorage/Dropbox/GitHub Website/profile.JPG" style="inline" width="240" align="left"/>
 
 <div style="padding-left:300px">
 
-I am an Assistant Professor in the Department of Political Science at Arkansas State University.
+I am an Assistant Professor in the Truman School of Government and Public Affairs at University of Missouri.
 
-My research interests focus on the intersection between economic development, representation, and comparative public policy. 
+I study comparative political behavior, the politics of immigrant integration, and political representation. I have a special interest in time series and pooled times series analysis. 
 
-My book project is an extension of my dissertation and investigates how poverty and income inequality affect democratic politics, focusing on their consequences for security policy.
+My current research interests focus on immigrant-origin political behavior, particularly refugees and asylum-seekers, attitudes towards these groups, as well as the effects of women's representation. 
 
-I am also producing research in the areas of urban politics, gender and racial politics, coalition governments, and political methodology.
+My work has been published in journals such as Political Science Research and Methods, Polity, Social Science Quarterly and Legislative Studies Quarterly. I hold a Ph.D. in Political Science from University of Colorado Boulder.
 
 </div>
 
